ci: Fix benchmark reporting, switch to scala-cli action (#52)
* ci: Fix benchmark reporting on Windows

* Add mode reporting, formatting

* Fix benchmark reporting on Windows